perf(spot): implement batching for engine and metrics to optimize throughput
- Implement MAX_BATCH_SIZE in Engine.doWork to reduce DocumentContext overhead
- Implement metrics batching (METRICS_BATCH_SIZE) in AeronReceiver, Engine, and WsCommandInboundHandler to reduce ChronicleMap contention
- Fix MatchingApp.cleanDataDirectory to exclude 'aeron' and 'logs' directories
- Add mainClass configuration for spot-ws-api maven plugin
- Update performance tuning documentation and startup script logic